--- a/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
+++ b/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
@@ -11,6 +11,7 @@
 
 <!--Styling-->
 <link href="../website/styles.css" rel="stylesheet">
+<link href="../website/favicon.ico" rel="icon">
 
 
 <style type="text/css">
@@ -14579,13 +14580,15 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light" style="padding:0px">
   <nav class="border navbar navbar-expand-md navbar-light">
     <div class="container-fluid" id="nav-text">
+        <img alt="logo" src="../website/logo.png" style="height: 2rem;">
         <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../stats.html" style="color: #ffffff">Stats</a></li>
+              <li class="nav-item"><a class="nav-link" href="../website/about.html" style="color: #ffffff">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="../website/stats.html" style="color: #ffffff">Stats</a></li>
             </ul>
         </div>
     </div>
@@ -16430,11 +16433,6 @@ CD and LogFC are statistically significantly different
           <div class="col-md-2 col-sm text-center">
               <a href="https://icahn.mssm.edu/research/bioinformatics" target="_blank">
                   <img class="rounded" src="../website/icahn_cb.png" style="height: 5rem;">
-              </a>
-          </div>
-          <div class="col-md-2 col-sm text-center">
-              <a href="http://lincs-dcic.org" target="_blank">
-                  <img class="rounded" src="../website/dcic_light.png" style="height: 5rem;">
               </a>
           </div>
           <div class="col-md-2 col-sm text-center">
