--- a/website/rnaseq_sigs.html
+++ b/website/rnaseq_sigs.html
@@ -38,11 +38,32 @@
                         <th>Study Title</th>
                         <th>GEO ID</th>
                         <th>Organism</th>
+                        <th>DEG Method</th>
                         <th class="text-end">Gene Signatures</th>
                     </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr>
+                        <td>The effect of lithium and dexamethasone on fetal rat metatarsal bones transcriptome</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186104" target = "_blank">GSE186104</a></td>
+                        <td>Rat</td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE186104.txt" target="_blank">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Glucocorticoids enhance the anti-leukemic activity of FLT3 inhibitors in FLT3 mutant acute myeloid leukemia</td>
+                        <td><a  href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE116432" target = "_blank">GSE116432</a></td>
+                        <td>Human</td>
+                        <td></td>
+                        <td class="text-end">Signatures</td>
+                    </tr>
+                    <tr>
+                        <td>Synergism between PPARα and glucocorticoid receptor signaling promotes self-renewal of BFU-E erythroid progenitors and increases red cell production</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE63836" target = "_blank">GSE63837</a></td>
+                        <td>Mouse</td>
+                        <td>DESeq (by authors of study)</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE63836_C15Dx_versus_Untr.DESeq.txt" target="_blank">Signatures</a></td>
+                    </tr>
                 </tbody>
             </table>
         </main>
