--- a/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
+++ b/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Dexamethasone Benchmark: Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmarking Resource</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 <!-- http://getbootstrap.com/docs/5.1/ -->
 <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
@@ -14581,7 +14581,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
   <nav class="border navbar navbar-expand-md navbar-light">
     <div class="container-fluid" id="nav-text">
         <img alt="logo" src="../website/logo.png" style="height: 2rem;">
-        <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+        <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
         <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14601,7 +14601,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark<a class="anchor-link" href="#Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">&#182;</a></h1><p>This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs two DEG methods, characteristic direction and log fold change, on the data using code adapted from Bulk RNA-seq Analysis pipeline appyter: <a href="https://appyters.maayanlab.cloud/Bulk_RNA_seq/">https://appyters.maayanlab.cloud/Bulk_RNA_seq/</a></p>
+<h1 id="Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmarking Resource<a class="anchor-link" href="#Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">&#182;</a></h1><p>This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs two DEG methods, characteristic direction and log fold change, on the data using code adapted from Bulk RNA-seq Analysis pipeline appyter: <a href="https://appyters.maayanlab.cloud/Bulk_RNA_seq/">https://appyters.maayanlab.cloud/Bulk_RNA_seq/</a></p>
 <p>The results of the DEG methods are benchmarked after enrichment analysis focused on the NR3C1 transcription factor, the known target of dexamethasone.</p>
 
 </div>
