--- a/website/rnaseq_sigs.html
+++ b/website/rnaseq_sigs.html
@@ -16,7 +16,7 @@
         <nav class="border navbar navbar-expand-md navbar-light">
             <div class="container-fluid" id="nav-text">
                 <img alt="logo" src="logo.png" style="height: 3.5rem;">
-                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmark</a>
+                <a class="navbar-brand" href="../index.html" style="color: #ffffff">Dexamethasone Benchmarking Resource</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -51,11 +51,25 @@
                         <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE186104.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
-                        <td>Glucocorticoids enhance the anti-leukemic activity of FLT3 inhibitors in FLT3 mutant acute myeloid leukemia</td>
-                        <td><a  href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE116432" target = "_blank">GSE116432</a></td>
+                        <td>Gene expression profiling of MDA_MB_231 cell line in response to treatment with Dexamethasone and SH4-54</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE137535" target = "_blank">GSE137535</a></td>
                         <td>Human</td>
-                        <td></td>
-                        <td class="text-end">Signatures</td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE137535.txt">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Genomic landscape of endothelial cell-glucocorticoid receptor interactions: Regulation of the Wnt signaling pathway [RNA-seq]</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE119092" target = "_blank">GSE119092</a></td>
+                        <td>Mouse</td>
+                        <td>Log Fold Change</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE119092_gr.txt" target="_blank">GR KD Signatures</a>, <a href="../dex_signatures_data/RNA-seq_signatures/GSE119092_dex.txt" target="_blank">Dex Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Loss of Glucocorticoid Receptor Expression Mediates in Vivo Dexamethasone Resistance in T-cell Acute Lymphoblastic Leukemia</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE141967" target = "_blank">GSE141967</a></td>
+                        <td>Mouse</td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE141967.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Synergism between PPARα and glucocorticoid receptor signaling promotes self-renewal of BFU-E erythroid progenitors and increases red cell production</td>
@@ -63,6 +77,13 @@
                         <td>Mouse</td>
                         <td>DESeq (by authors of study)</td>
                         <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE63836_C15Dx_versus_Untr.DESeq.txt" target="_blank">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Glucocorticoids and the cytokines IL-12, IL-15 and IL-18 present in the tumor microenvironment induce PD-1 expression on human Natural Killer cells</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE149113" target = "_blank">GSE149113</a></td>
+                        <td>Human</td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE149113.txt">Signatures</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -84,20 +105,12 @@
                 <div class="col-md-2 col-sm">
                     <div class="row my-2">
                         <a class="badge badge-secondary px-2" href="https://github.com/MaayanLab/dex-benchmark" target="_blank">
-                            <span class="badge badge-light">
-                                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                     style="width: 1rem;">
-                    </span>
                             View source code
                         </a>
                     </div>
                     <div class="row my-2">
                         <a class="badge badge-secondary px-2"
                            href="https://github.com/MaayanLab/dex-benchmark/issues/new" target="_blank">
-                            <span class="badge badge-light">
-                            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                                 style="width: 1rem;">
-                                </span>
                             Submit an issue
                         </a>
                     </div>
