--- a/website/rnaseq_sigs.html
+++ b/website/rnaseq_sigs.html
@@ -83,7 +83,84 @@
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE149113" target = "_blank">GSE149113</a></td>
                         <td>Human</td>
                         <td>Characteristic Direction</td>
-                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE149113.txt">Signatures</a></td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE149113.txt" target="_blank">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Effect of emodin on long non-coding RNA-mRNA networks in rats with severe acute pancreatitis-induced acute lung injury</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151572" target = "_blank">GSE151572</a></td>
+                        <td>Rat</td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE151572_24h.txt" target="_blank">Dex 24h Signatures</a>, <a href="../dex_signatures_data/RNA-seq_signatures/GSE151572_6h.txt" target="_blank">Dex 6h Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>Gene expression data of livers from C57BL/6J mice treated with vehicle control or dexamethasone</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE159084" target="_blank">GSE159084</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>Integrated genomic and proteomic analyses identify stimulus-dependent distinct molecular changes associated with skeletal muscle wasting</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE159952">GSE159952</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>RNA-sequencing analysis reveals transcriptomic profile of Dexamethasone-differentiated CAD cells</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE162087">GSE162087</a></td>
+                        <td>Mouse</td>
+                        <td>Log Fold Change (by authors of study)</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE162087_PRO_DEX_DEG_list.xlsx" target="_blank">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>RNA-Seq of mice Bone Marrow Mononuclear Cells (BMMCs) under IL-3 + IL-33 or Dexamethasone (Dex) or transforming growth factor beta-1 (TGFb) tretament</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE163065">GSE163065</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>A primed immune transcriptional program is activated in oligodendroglia in multiple sclerosis [RNA-seq IFNg_vs_Dexa_vs_Ctr]</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE173182">GSE173182</a></td>
+                        <td>Mouse</td>
+                        <td>DESeq (by authors of study)</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE173182_Dexa_DGE_deseq2.Gene.res.txt" target="_blank">Signatures</a></td>
+                    </tr>
+                    <tr>
+                        <td>ZBTB32 performs crosstalk with the glucocorticoid receptor and is crucial in glucocorticoid responses to starvation</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE176277">GSE176277</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>Glucocorticoids inhibit human hematopoietic stem cell differentiation toward a common ILC precursor</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186950">GSE186950</a></td>
+                        <td>Human</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>Next generation sequencing analysis of mouse adrenal glands after a one-hour dexamethasone treatment</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189182">GSE189182</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>Next generation sequencing analysis in Y-1 mouse adrenocortical cells after dexamethasone treatment</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189305">GSE189305</a></td>
+                        <td>Mouse</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td>Neuronal and cardiac toxicity of pharmacological compounds identified through transcriptomic analysis of human pluripotent stem cell-derived embryoid bodies</td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE195617">GSE195617</a></td>
+                        <td>Human</td>
+                        <td></td>
+                        <td class="text-end"><a target="_blank"></a></td>
                     </tr>
                 </tbody>
             </table>
