--- a/website/rnaseq_sigs.html
+++ b/website/rnaseq_sigs.html
@@ -55,7 +55,7 @@
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE137535" target = "_blank">GSE137535</a></td>
                         <td>Human</td>
                         <td>Characteristic Direction</td>
-                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE137535.txt">Signatures</a></td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE137535.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Genomic landscape of endothelial cell-glucocorticoid receptor interactions: Regulation of the Wnt signaling pathway [RNA-seq]</td>
@@ -101,63 +101,63 @@
                     </tr>
                     <tr>
                         <td>Integrated genomic and proteomic analyses identify stimulus-dependent distinct molecular changes associated with skeletal muscle wasting</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE159952">GSE159952</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE159952" target="_blank">GSE159952</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE159952.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>RNA-sequencing analysis reveals transcriptomic profile of Dexamethasone-differentiated CAD cells</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE162087">GSE162087</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE162087" target="_blank">GSE162087</a></td>
                         <td>Mouse</td>
                         <td>Log Fold Change (by authors of study)</td>
                         <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE162087_PRO_DEX_DEG_list.xlsx" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>RNA-Seq of mice Bone Marrow Mononuclear Cells (BMMCs) under IL-3 + IL-33 or Dexamethasone (Dex) or transforming growth factor beta-1 (TGFb) tretament</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE163065">GSE163065</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE163065" target="_blank">GSE163065</a></td>
                         <td>Mouse</td>
                         <td></td>
                         <td class="text-end"><a target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td>A primed immune transcriptional program is activated in oligodendroglia in multiple sclerosis [RNA-seq IFNg_vs_Dexa_vs_Ctr]</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE173182">GSE173182</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE173182" target="_blank">GSE173182</a></td>
                         <td>Mouse</td>
                         <td>DESeq (by authors of study)</td>
                         <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE173182_Dexa_DGE_deseq2.Gene.res.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>ZBTB32 performs crosstalk with the glucocorticoid receptor and is crucial in glucocorticoid responses to starvation</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE176277">GSE176277</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE176277" target="_blank">GSE176277</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE176277_wt.txt" target="_blank">Wildtype Signatures</a>, <a href="../dex_signatures_data/RNA-seq_signatures/GSE176277_mut.txt" target="_blank">Zbtb32-/- Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Glucocorticoids inhibit human hematopoietic stem cell differentiation toward a common ILC precursor</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186950">GSE186950</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186950" target="_blank">GSE186950</a></td>
                         <td>Human</td>
                         <td></td>
                         <td class="text-end"><a target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td>Next generation sequencing analysis of mouse adrenal glands after a one-hour dexamethasone treatment</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189182">GSE189182</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189182" target="_blank">GSE189182</a></td>
                         <td>Mouse</td>
                         <td></td>
                         <td class="text-end"><a target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td>Next generation sequencing analysis in Y-1 mouse adrenocortical cells after dexamethasone treatment</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189305">GSE189305</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189305" target="_blank">GSE189305</a></td>
                         <td>Mouse</td>
                         <td></td>
                         <td class="text-end"><a target="_blank"></a></td>
                     </tr>
                     <tr>
                         <td>Neuronal and cardiac toxicity of pharmacological compounds identified through transcriptomic analysis of human pluripotent stem cell-derived embryoid bodies</td>
-                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE195617">GSE195617</a></td>
+                        <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE195617" target="_blank">GSE195617</a></td>
                         <td>Human</td>
                         <td></td>
                         <td class="text-end"><a target="_blank"></a></td>
