--- a/website/rnaseq_sigs.html
+++ b/website/rnaseq_sigs.html
@@ -96,8 +96,8 @@
                         <td>Gene expression data of livers from C57BL/6J mice treated with vehicle control or dexamethasone</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE159084" target="_blank">GSE159084</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE159084.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Integrated genomic and proteomic analyses identify stimulus-dependent distinct molecular changes associated with skeletal muscle wasting</td>
@@ -117,8 +117,8 @@
                         <td>RNA-Seq of mice Bone Marrow Mononuclear Cells (BMMCs) under IL-3 + IL-33 or Dexamethasone (Dex) or transforming growth factor beta-1 (TGFb) tretament</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE163065" target="_blank">GSE163065</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE163065.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>A primed immune transcriptional program is activated in oligodendroglia in multiple sclerosis [RNA-seq IFNg_vs_Dexa_vs_Ctr]</td>
@@ -138,29 +138,29 @@
                         <td>Glucocorticoids inhibit human hematopoietic stem cell differentiation toward a common ILC precursor</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE186950" target="_blank">GSE186950</a></td>
                         <td>Human</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE186950.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Next generation sequencing analysis of mouse adrenal glands after a one-hour dexamethasone treatment</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189182" target="_blank">GSE189182</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE189182.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Next generation sequencing analysis in Y-1 mouse adrenocortical cells after dexamethasone treatment</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE189305" target="_blank">GSE189305</a></td>
                         <td>Mouse</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Characteristic Direction</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE189305.txt" target="_blank">Signatures</a></td>
                     </tr>
                     <tr>
                         <td>Neuronal and cardiac toxicity of pharmacological compounds identified through transcriptomic analysis of human pluripotent stem cell-derived embryoid bodies</td>
                         <td><a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE195617" target="_blank">GSE195617</a></td>
                         <td>Human</td>
-                        <td></td>
-                        <td class="text-end"><a target="_blank"></a></td>
+                        <td>Log Fold Change</td>
+                        <td class="text-end"><a href="../dex_signatures_data/RNA-seq_signatures/GSE195617.txt" target="_blank">Signatures</a></td>
                     </tr>
                 </tbody>
             </table>
