--- a/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
+++ b/Benchmarking RNA-seq DEG Methods/Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.html
@@ -14594,7 +14594,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
     </div>
 </nav>
 <div style="margin-left: 5%; margin-right: 7%; margin-top: 10px; margin-bottom: 20px">
-  <button class="btn btn-primary" style="margin-left: 90%"><a href="Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmark.ipynb">Download</a></button>
+  <button class="btn btn-primary" style="margin-left: 90%"><a href="DEG_benchmark.zip">Download</a></button>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
