--- a/Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html
+++ b/Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html
@@ -14587,7 +14587,11 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="../website/about.html" style="color: #ffffff">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="../website/about.html" style="color: #ffffff">About</a></li>
+                <li class="nav-item"><a class="nav-link"
+                    href="../website/code.html" style="color:#ffffff">Code</a></li>
+                <li class="nav-item"><a class="nav-link" 
+                  href="../website/data.html" style="color:#ffffff">Data</a></li>
                 <li class="nav-item"><a class="nav-link" href="../website/stats.html" style="color: #ffffff">Stats</a></li>
             </ul>
         </div>
