Update HTML formatting

--- a/Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html
+++ b/Benchmarking_RNA-seq_DEG_Methods/benchmarking_RNAseq_DEGs.html
@@ -14586,13 +14586,13 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="../website/about.html" style="color: #ffffff;font-size:16px">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../website/code.html" style="color:#ffffff;font-size:16px">Code</a></li>
-                <li class="nav-item"><a class="nav-link" href="../website/data.html" style="color:#ffffff;font-size:16px">Data</a></li>
-                <li class="nav-item"><a class="nav-link" href="../website/figures.html" style="color:#ffffff;font-size:16px">Figures</a></li>
-                <li class="nav-item"><a class="nav-link" href="../website/stats.html" style="color: #ffffff;font-size:16px">Stats</a></li>
-            </ul>
+          <ul class="navbar-nav ms-auto">
+              <li class="nav-item"><a class="nav-link" href="../website/about.html" style="color: #ffffff; font-size: 16px">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="../website/code.html" style="color: #ffffff; font-size: 16px">Code</a></li>
+              <li class="nav-item"><a class="nav-link" href="../website/data.html" style="color: #ffffff; font-size: 16px">Data</a></li>
+              <li class="nav-item"><a class="nav-link" href="../website/figures.html" style="color: #ffffff; font-size: 16px">Figures</a></li>
+              <li class="nav-item"><a class="nav-link" href="../website/stats.html" style="color: #ffffff; font-size: 16px">Stats</a></li>
+          </ul>
         </div>
     </div>
 </nav>
@@ -14609,7 +14609,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">
-  Benchmarking RNA-seq DEG Methods with the Dexamethasone Benchmarking Resource<a class="anchor-link" href="#Benchmarking-RNA-seq-DEG-Methods-with-the-Dexamethasone-Benchmark">&#182;</a>
+  Benchmarking RNA-seq DEG Methods with GEO Data<a class="anchor-link" href="#Benchmarking-RNA-seq-DEG-Methods-with-GEO-Data">&#182;</a>
 </h1>
 <p>
     This notebook reads in designated meta data and RNA-seq expression data files from a dexamethasone study and performs several DGE methods on the code.
